--- a/about.css
+++ b/about.css
@@ -153,3 +153,14 @@ nav ul li a{
     animation-delay: 1s;
 
 }
+
+
+.footer{
+    position: absolute; 
+    left: 0;
+    bottom: 0; 
+    width: 100%; 
+    padding: 10px;
+    text-align: center;
+    font-weight: 200;
+}
