--- a/about.css
+++ b/about.css
@@ -4,6 +4,7 @@
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
     color: #333;
+    
 }
 
 .background{
@@ -14,7 +15,7 @@
     background-size: cover;
     padding: 10px 10%;
     overflow: hidden;
-    position: absolutes;
+    position: relative;
 }
 
 .logo{
@@ -52,8 +53,6 @@ nav ul li a{
     margin-top: 15%;
     max-width: 50%;
     left:0;
-    position: absolute
-    padding 10%;
     bottom: 35%;
 }
 
@@ -71,10 +70,11 @@ nav ul li a{
 }
 
 .experiences{
-    max-width: 48%;
+    max-width: 50%;
     position: absolute;
     right: 10%;
     top: 30%;
+    display: block;
 
 }
 
@@ -87,7 +87,7 @@ nav ul li a{
 
 }
 
-.title{
+.experiences .title{
     font-weight: bold;
     font-size: 35px; 
     margin-bottom: 20%;
@@ -163,4 +163,31 @@ nav ul li a{
     padding: 10px;
     text-align: center;
     font-weight: 200;
+}
+
+@media (max-width: 600px) {
+
+    .leftSection, .experiences {
+        width: 85%;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
+    .leftSection p{
+        display: None;
+    
+    }
+    .experiences {
+        max-width: 85%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .leftSection h1{
+        font-size: 50px;
+    }
+    
+
+
+
+
 }
