--- a/index.css
+++ b/index.css
@@ -107,6 +107,17 @@ nav ul li a{
 
 @media (max-width: 600px) {
 
+    .background{
+        width: 100%;
+        height: 100%;
+        min-height: 100vh;
+        background-image: url(blueGradient.jpg);
+        background-position: center;
+        background-size: cover;
+        padding: 10px 10%;
+        overflow: hidden;
+        position: absolute;
+    }
     nav{
         padding: 10px 0;
         display: flex;
