--- a/experience.css
+++ b/experience.css
@@ -8,6 +8,7 @@
     
 }
 
+
 .background{
     width: 100%;
     min-height: 100vh;
@@ -29,6 +30,7 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
+
 nav ul {
     list-style-type: none;
     text-align: center;
@@ -47,70 +49,28 @@ nav ul li a{
     font-weight: 200;
 }
 
-
-/* body part  */
-
-.leftSection{
+.content {
     position: relative;
-    z-index: 2;
     margin-top: 15%;
-    max-width: 40%;
-    left:0;
-    /* bottom: 35%; */
-}
-
-
-.leftSection h1{
+    max-width: 600px;
+    z-index: 2;
+    width: 85%;
+    padding: 10px;
+    margin-bottom: 20px;
     font-size: 100px;
 }
 
-.leftSection p{
-    font-size: 25px;
-    font-weight: 200;
-    margin: 10px 0 30px;
-    animation-delay: 0.5s;
-
-}
-
-
-/* Button */
-/* original one (for phonei think ) */
-/* .experiencename{
-    font-size: 20px; 
-    margin-bottom: 20%;
-    
-} */
-
-.experiencename {
-    display: None;
-    font-size: 20px;
-    margin-top: 50px;
-    position: absolute; /* Positioning the element */
-    right: 10%; /* Adjust this value as needed */
-    top: 15%; /* Adjust this value as needed */
-    width: 30%; /* Adjust width as needed */
-}
-
-.experiencename{
-    font-size: 20px; 
-    margin-bottom: 20%;
-    
-}
-.experiencename h1{
-    margin-top: 15%;
-    font-weight: 200;
-    font-size: 35px; 
-    margin-bottom: 10%;
-    align-items: center;
+.container {
+    width: 100%;
+    display: flex;
     justify-content: center;
 }
 
-.container{
-    display: flex;
-    flex-direction: column; 
-    align-items: flex-start; 
-    justify-content: flex-start; 
-    gap: 20px;
+.button-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-gap: 20px; /* Gap between buttons */
+    max-width: 600px;
 }
 
 .btn{
@@ -211,14 +171,15 @@ nav ul li a{
 }
 
 
-.footer{
-    position: absolute; 
-    left: 0;
-    bottom: 0; 
-    width: 100%; 
+.footer {
+    position: relative;
+    width: 100%;
     padding: 10px;
     text-align: center;
+    z-index: 2;
     font-weight: 200;
+    margin-top: auto;
+    bottom: 0%; /* Ensure the footer stays at the bottom */
 }
 
 
