--- a/index.css
+++ b/index.css
@@ -115,6 +115,7 @@ body, html {
 }
 
 .chatbox {
+    display: none;
     background-color: rgba(255, 255, 255, 0.8);
     width: 300px;
     border-radius: 8px;
