--- a/project.css
+++ b/project.css
@@ -9,15 +9,13 @@
 
 .background{
     width: 100%;
-    height: 100%;
     min-height: 100vh;
     background-image: url(blueGradient.jpg);
     background-position: center;
     background-size: cover;
     padding: 10px 10%;
     overflow: hidden;
-    /* position: absolute; */
-    background-size: cover;
+    position: absolute;
 
 }
 
@@ -55,6 +53,10 @@ nav ul li a{
     position: relative;
     margin-top: 15%;
     z-index: 2;
+    width: 85%;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 5vw;
 }
 
 .title h1{
@@ -78,27 +80,31 @@ nav ul li a{
 }
 
 .container{
-    /* display: flex; */
+    /* display: flex;
     text-align: center;
     flex-direction: column; 
-    /* align-items: flex-start;  */
-    /* justify-content: flex-start;  */
-    gap: 20px;
+    justify-content: flex-start;  
+    gap: 20px; 
+    */
+    display: flex;
+    justify-content: center;
+}
+
+.button-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-gap: 20px; /* Gap between buttons */
 }
 
 .btn{
     /* padding: 50px 100px; */
-    padding: 2em 2em;
-    min-width: 300px;
-    max-width: 300px;
+    padding: 4vw;
     background-color: #FFFF;
     border: 0;
-    margin: 1%;
-    outline: none;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 2vw;
     font-weight: 200;
-    border-radius: 50px;
+    border-radius: 10px;
     transition: transform 0.2s;
     
 }
@@ -106,37 +112,41 @@ nav ul li a{
 .btn:active{
     transform: scale(0.95);
 }
-
+/* 
 .inline-overview {
     display: flex;
     align-items: center;
-}
+} */
 
 
 .popup{
     background-color: #DAEDF7;
-    border-radius: 50px;
+    border-radius: 10px;
     position:fixed;
     top: 50%;
     left: 50%;
     /* testing purpose */
     transform: translate(-50%,-50%);
+
+    /* transform: translate(-50%,-50%) scale(0.1); */
     z-index: 1000;
     text-align: center;
     padding: 10px 30px;
+    /* padding: 10vw; */
+
     font-weight: 200;
-    font-size: 100%;
-    width: 80vw;
+    font-size: 75%;
+    /* width: 80vw; */
     height: auto;
     max-height: 80vh;
     visibility: hidden;
     box-shadow: 0px 0px 50000px rgba(0, 0, 0, 0.5);
 
-}
+/* }
 .no-bullets {
     list-style-type: none;
     padding-left: 0;      
-}
+} */
 
 .popup button {
     margin-top: 10px;
