--- a/games/RockPaperScissors.css
+++ b/games/RockPaperScissors.css
@@ -146,6 +146,17 @@ nav ul li a{
     border-radius: 4px;
 }
 
+.main h3 {
+    font-weight: 200;
+    font-size: 6vw;
+}
+
+.main p{
+    font-weight: 200;
+    font-size: 2vw;
+
+}
+
 .main .character-btn {
     background-color: #DAEDF7;
     border: none; /* Reset any borders */
@@ -170,5 +181,12 @@ nav ul li a{
     border: 5px solid navy; /* Border around the selected image */
     background-color: #DAEDF7;
     z-index: 5;
+
+}
+
+
+#result-display {
+    margin-top: 20px;
+    font-size: 1.5em;
 
 }
