--- a/games.css
+++ b/games.css
@@ -1,15 +1,16 @@
 *{
     margin: 0;
     padding: 0;
-    color: #333;
     box-sizing:border-box;
     font-family: 'Poppins', sans-serif;
+    color: #333;
+    font-size: 100%;
+    
+}*
 
-}
 
 .background{
     width: 100%;
-    height: 100%;
     min-height: 100vh;
     background-image: url(blueGradient.jpg);
     background-position: center;
@@ -17,11 +18,7 @@
     padding: 10px 10%;
     overflow: hidden;
     position: absolute;
-    background-size: cover;
-
 }
-
-
 
 .logo{
     width:200px;
@@ -33,12 +30,14 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
+
 nav ul {
     list-style-type: none;
     text-align: center;
     padding: 0;
     margin: 0; 
 }
+
 nav ul li {
     display: inline-block;
     margin: 10px 15px;
@@ -51,24 +50,49 @@ nav ul li a{
 }
 
 
+
 .title {
     position: relative;
     margin-top: 15%;
     z-index: 2;
+    width: 85%;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 5vw;
 }
 
-.title h1{
-    font-size: 100px;
-    max-width: 600px;
-}
 
-.title p{
-    font-size: 25px;
-    max-width: 800px;
+.title p.animation {
+    font-size: 2vw;
     font-weight: 200;
-    margin: 10px 0 50px;
-    animation-delay: 0.5s;
+}
 
+.content{
+    display: flex;
+    justify-content: center;
+}
+
+.button-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-gap: 20px; /* Gap between buttons */
+}
+
+.btn{
+    /* padding: 50px 100px; */
+    padding: 4vw;
+    background-color: #FFFF;
+    border: 0;
+    cursor: pointer;
+    font-size: 2vw;
+    font-weight: 200;
+    border-radius: 10px;
+    transition: transform 0.2s;
+    
+}
+
+.btn:active{
+    transform: scale(0.95);
 }
 
 
@@ -95,6 +119,7 @@ nav ul li a{
 .featuring-img.animation{
     animation-delay: 1s;
 }
+
 .animation {
     opacity: 0;
     transform: translateY(30px);
