--- a/project.css
+++ b/project.css
@@ -240,9 +240,31 @@ nav ul li a{
 
 }
 
-@media (max-width: 600px) {
-    .title h1{
-        font-size: 50px;
+@media (max-width: 750px) {
+    /* .title h1{ font-size: 50px; } */
+    .popup {
+        background-color: #DAEDF7;
+        border-radius: 10px;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000;
+        text-align: center;
+        padding: 10px 30px;
+        font-weight: 200;
+        font-size: 75%;
+        width: min(80vw, 400px);
+        max-height: 70vh;
+        overflow: auto;
+        visibility: hidden;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
+        z-index: 10;
     }
-
+    .openPopup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1); /* Ensuring the popup scales up when visible */
+    }
 }
+
