--- a/experience.css
+++ b/experience.css
@@ -93,26 +93,20 @@ nav ul li a{
 .popup{
     background-color: #DAEDF7;
     border-radius: 10px;
-    position:fixed;
+    position: fixed;
     top: 50%;
     left: 50%;
-    /* testing purpose */
-    transform: translate(-50%,-50%);
-
-    /* transform: translate(-50%,-50%) scale(0.1); */
+    transform: translate(-50%, -50%);
     z-index: 1000;
     text-align: center;
     padding: 10px 30px;
-    /* padding: 10vw; */
-
     font-weight: 200;
     font-size: 75%;
-    /* width: 80vw; */
-    height: auto;
-    max-height: 80vh;
+    width: min(80vw, 50vw);
+    max-height: 70vh;
+    overflow: auto;
     visibility: hidden;
-    box-shadow: 0px 0px 50000px rgba(0, 0, 0, 0.5);
-    /* transition: transform 0.3s ease, visibility 0s linear 0.3s;  */
+    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
 
 
 }
